<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/txtTitle"
        android:gravity="center_horizontal"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/txtMiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="25sp"
        android:hint="@string/hint1"
        android:importantForAutofill="no" />

    <RadioGroup
        android:id="@+id/rg1"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtMiles"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <RadioButton
            android:id="@+id/rb10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb10" />

        <RadioButton
            android:id="@+id/rb17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb17" />

        <RadioButton
            android:id="@+id/rb26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb26" />
    </RadioGroup>

    <Button
        android:id="@+id/btnCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rg1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/btnCost"
        android:textSize="25sp"/>

    <ImageView
        android:id="@+id/imgOpening"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnCost"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/imgDescription"
        app:srcCompat="@drawable/opening"
        android:layout_marginTop="5dp" />


</RelativeLayout>